--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuarios.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuarios.razor
@@ -1,5 +1,6 @@
 ﻿@page "/ListaUsuarios"
-@rendermode InteractiveServer
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
+
 @using DataBase.Genericos
 @using DataBase.Modelo
 @using DataBase.Servicios
@@ -7,6 +8,7 @@
 @inject ITenantProvider TenantProvider
 @inject IContextKeyProvider ContextKeyProvider
 @inject NavigationManager nav
+@implements IDisposable
 
 
 <h3>Listado de usuarios (Genérico)</h3>
@@ -21,7 +23,7 @@ else
 {
 
     <p>Usuarios del tenant <strong>@TenantProvider.CurrentTenantId</strong>:</p>
-    <p>Usuarios del tenant <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
+    <p>Usuarios del contexto <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
 
 @if (usuarios is null)
 {
@@ -52,7 +54,7 @@ else
                         <td>@user.Id</td>
                         <td>@user.UserName</td>
                         <td>@user.Codigo</td>
-                        <td>@user.NivelAcceso</td>
+                        <td>@user.Contexto</td>
                         <td>@user.Password</td>
                         <td>@user.email</td>
                         <td>@user.TenantId</td>
@@ -67,7 +69,7 @@ else
 
 
 @code {
-    public List<Usuario>? usuarios { get; set; } = null;
+    public List<Usuario>? usuarios { get; set; } = new List<Usuario>();
     int TenantId;
     string ContextoKey ="";
 
@@ -115,6 +117,11 @@ else
             Console.WriteLine(ex.InnerException?.ToString());
             throw;
         }
+    }
+
+    void IDisposable.Dispose()
+    {
+        Dispose();
     }
 
     private void Dispose()
