--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DeleteUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DeleteUsuario.razor
@@ -1,5 +1,5 @@
 ﻿@page "/DeteteUsuario/{Id:int}"   
-@rendermode InteractiveServer
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 @using DataBase.Genericos
 @using DataBase.Modelo
 @using DataBase.Servicios
@@ -7,11 +7,12 @@
 @inject ITenantProvider TenantProvider
 @inject IContextKeyProvider ContextKeyProvider
 @inject NavigationManager nav
+@implements IDisposable
 
 
 <h3>DetalleUsuario</h3>
 <p>Usuarios del tenant <strong>@TenantProvider.CurrentTenantId</strong>:</p>
-<p>Usuarios del tenant <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
+<p>Usuarios del contexto <strong>@ContextKeyProvider.CurrentContextKey</strong>:</p>
 
 <div class="container">
     <EditForm Model="@NewUser" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" FormName="DetalleUsuarioForm">
@@ -37,8 +38,8 @@
                 <div class="row" style="margin-top:10px">
                     <div class="col-md-12">
                         <label for="NivelAcceso">NivelAcceso #</label>
-                        <input type="text" class="form-control" id="NivelAcceso" @bind-value="NewUser.NivelAcceso" placeholder="enter NivelAcceso ..." />
-                        <ValidationMessage For="@(() => NewUser.NivelAcceso)" />
+                        <input type="text" class="form-control" id="NivelAcceso" @bind-value="NewUser.Contexto" placeholder="enter NivelAcceso ..." />
+                        <ValidationMessage For="@(() => NewUser.Contexto)" />
                     </div>
                 </div>
 
@@ -177,6 +178,10 @@
         var _t = int.Parse((e.Value as string) ?? "0");
         TenantProvider.SetTenant(_t);
     
+    }
+    void IDisposable.Dispose()
+    {
+        Dispose();
     }
     private void Dispose()
     {
