--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
@@ -60,6 +60,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ListaUsuariosApi">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Api
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="ListaUsuariosMultipleContext">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleContext
             </NavLink>
