--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
@@ -5,7 +5,7 @@
 @using DataBase.Modelo
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
-@inject IContextKeyProvider ContextKeyProvider
+@inject IContextKeyDbProvider ContextKeyProvider
 @inject ITenantProvider TenantProvider
 @inject NavigationManager nav
 @implements IDisposable
