--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuarios.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuarios.razor
@@ -6,7 +6,7 @@
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
 @inject ITenantProvider TenantProvider
-@inject IContextKeyProvider ContextKeyProvider
+@inject IContextKeyDbProvider ContextKeyProvider
 @inject NavigationManager nav
 @implements IDisposable
 
