--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosAPI.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosAPI.razor
@@ -6,7 +6,7 @@
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UowFactory
 @inject ITenantProvider TenantProvider
-@inject IContextKeyProvider ContextKeyProvider
+@inject IContextKeyDbProvider ContextKeyProvider
 @inject NavigationManager nav
 @implements IDisposable
 
@@ -105,7 +105,7 @@ else
         try
         {
 
-            usuarioService= new ServicioUsuarios(ContextKeyProvider, UowFactory, TenantProvider);
+            usuarioService= new ServicioUsuarios(ContextKeyProvider, UowFactory, TenantProvider,true);
             var list = await usuarioService.GetAllAsync();
             usuarios = list.ToList();
             TenantId = TenantProvider.CurrentTenantId ?? 0;
