--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosAPI.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosAPI.razor
@@ -6,7 +6,7 @@
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UowFactory
 @inject ITenantProvider TenantProvider
-@inject IContextKeyDbProvider ContextKeyProvider
+@inject IContextKeyProvider ContextKeyProvider
 @inject NavigationManager nav
 @implements IDisposable
 
