--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleTenant.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleTenant.razor
@@ -5,7 +5,7 @@
 @using DataBase.Servicios
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
 @inject ITenantProvider TenantProvider
-@inject IContextKeyDbProvider ContextKeyProvider
+@inject IContextKeyProvider ContextKeyProvider
 @inject NavigationManager nav
 @implements IDisposable
 
