--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Layout/NavMenu.razor
@@ -16,9 +16,7 @@
             }
         </select>
     </p>
-</div>
 
-<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">NewContext</a>
     </div>
@@ -31,9 +29,8 @@
             }
         </select>
     </p>
-</div>
 
-<div class="top-row ps-3 navbar navbar-dark">
+
     <div class="container-fluid">
         <a class="navbar-brand" href="">Modo Conexion API</a>
     </div>
@@ -52,52 +49,54 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
-        <div class="nav-item px-3">
+        <div class="nav-item ">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        <div class="nav-item ">
             <NavLink class="nav-link" href="DetalleUsuario">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Añadir
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        <div class="nav-item ">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
 
-         @if (!ContextKey.StartsWith("Api"))
-        {
-        <div class="nav-item px-3">
+  
+        <div class="nav-item ">
             <NavLink class="nav-link" href="ListaUsuarios">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
+        <div class="nav-item ">
             <NavLink class="nav-link" href="ListaUsuariosMultipleContext">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleContext
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+        <div class="nav-item ">
             <NavLink class="nav-link" href="ListaUsuariosMultipleTenant">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista MultipleTenant
             </NavLink>
         </div>
-        }
+        
 
-        @if (ContextKey.StartsWith("Api"))
-        {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="ListaUsuariosApi">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Api
+            <div class="nav-item ">
+                <NavLink class="nav-link" href="ListaUsuariosCliente">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Cliente
             </NavLink>
         </div>
-        }
+        <div class="nav-item ">
+            <NavLink class="nav-link" href="Counter">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Counter Cliente
+            </NavLink>
+        </div>
+        
     </nav>
 </div>
 @code{
